--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,26 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>AngularElements</title>
+  <title>Angular Elements - Demo</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+  <custom-button label="First Value"></custom-button>
+
+  <!--script for build purposes, do not delete modify it-->
+  <script title="production-script" src=""></script>
+
+  <script>
+    const button = document.querySelector('custom-button');
+    button.addEventListener('action', (event) => {
+      console.log(`"action" emitted: ${event.detail}`);
+    })
+    setTimeout(() => button.label = 'Second Value', 3000);
+  </script>
 </body>
+
 </html>
